--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -32,8 +32,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.GHCR_USERNAME }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Generate Docker metadata (GHCR)
         id: meta_ghcr
