--- a/linkwarden-mcp.env.example
+++ b/linkwarden-mcp.env.example
@@ -2,12 +2,14 @@
 MCP_IMAGE=ghcr.io/your-org/linkwarden-mcp:latest
 MCP_CONTAINER_NAME=linkwarden-mcp
 MCP_RESTART_POLICY=unless-stopped
+MCP_RUN_UID=1061
+MCP_RUN_GID=1061
 
 # Runtime settings
 MCP_HOST=0.0.0.0
 MCP_PORT=8080
 MCP_DATA_DIR=/data
-MCP_LOG_LEVEL=info
+MCP_LOG_LEVEL=debug
 MCP_STATE_DB_PATH=/data/state.db
 MCP_CONFIG_ENC_PATH=/data/config.enc
 MCP_SESSION_TTL_HOURS=12
