--- a/linkwarden-mcp.env.example
+++ b/linkwarden-mcp.env.example
@@ -14,6 +14,8 @@ MCP_STATE_DB_PATH=/data/state.db
 MCP_CONFIG_ENC_PATH=/data/config.enc
 MCP_SESSION_TTL_HOURS=12
 MCP_COOKIE_SECURE=auto
+MCP_HOST_BIND_IP=127.0.0.1
+MCP_HOST_PORT=39227
 
 # Auto-unlock settings (passphrase file mounted read-only)
 MCP_MASTER_PASSPHRASE_HOST_FILE=/volume2/docker/linkwarden-mcp/master.passphrase
