feat: add oauth support and docs

--- a/linkwarden-mcp.env.example
+++ b/linkwarden-mcp.env.example
@@ -14,6 +14,9 @@ MCP_STATE_DB_PATH=/data/state.db
 MCP_CONFIG_ENC_PATH=/data/config.enc
 MCP_SESSION_TTL_HOURS=12
 MCP_COOKIE_SECURE=auto
+MCP_PUBLIC_BASE_URL=https://mcp.example.tld
+MCP_OAUTH_ACCESS_TOKEN_TTL_SECONDS=1800
+MCP_OAUTH_REFRESH_TOKEN_TTL_SECONDS=2592000
 MCP_HOST_BIND_IP=127.0.0.1
 MCP_HOST_PORT=39227
 
