--- a/linkwarden-mcp.yaml
+++ b/linkwarden-mcp.yaml
@@ -16,6 +16,9 @@ services:
       CONFIG_ENC_PATH: ${MCP_CONFIG_ENC_PATH}
       SESSION_TTL_HOURS: ${MCP_SESSION_TTL_HOURS}
       COOKIE_SECURE: ${MCP_COOKIE_SECURE}
+      PUBLIC_BASE_URL: ${MCP_PUBLIC_BASE_URL}
+      OAUTH_ACCESS_TOKEN_TTL_SECONDS: ${MCP_OAUTH_ACCESS_TOKEN_TTL_SECONDS}
+      OAUTH_REFRESH_TOKEN_TTL_SECONDS: ${MCP_OAUTH_REFRESH_TOKEN_TTL_SECONDS}
       MCP_MASTER_PASSPHRASE_FILE: ${MCP_MASTER_PASSPHRASE_FILE}
     volumes:
       - ${MCP_VOLUME_HOST}:${MCP_VOLUME_CONTAINER}
