feat: add native governed-tagging provider support

--- a/linkwarden-mcp.env.example
+++ b/linkwarden-mcp.env.example
@@ -17,6 +17,10 @@ MCP_COOKIE_SECURE=auto
 MCP_PUBLIC_BASE_URL=https://mcp.example.tld
 MCP_OAUTH_ACCESS_TOKEN_TTL_SECONDS=1800
 MCP_OAUTH_REFRESH_TOKEN_TTL_SECONDS=2592000
+# Optional AI provider keys for governed tagging inferenceProvider
+MCP_PERPLEXITY_API_KEY=
+MCP_MISTRAL_API_KEY=
+MCP_HUGGINGFACE_API_KEY=
 MCP_HOST_BIND_IP=127.0.0.1
 MCP_HOST_PORT=39227
 
